add javascript open api & sample

--- a/DIoTY/views/layout.jade
+++ b/DIoTY/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='javascripts/api.ts.js')
     script(src='javascripts/thermometer.js')
   body(onload='draw();')
     block content
