--- a/DIoTY/views/layout.jade
+++ b/DIoTY/views/layout.jade
@@ -2,8 +2,5 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    script(src='javascripts/api.ts.js')
-    script(src='javascripts/thermometer.js')
-  body(onload='draw();')
+  body
     block content
