--- a/DIoTY/views/layout.jade
+++ b/DIoTY/views/layout.jade
@@ -2,5 +2,6 @@ doctype html
 html
   head
     title= title
+    meta(name='viewport', content='width=device-width, initial-scale=1')
   body
     block content
