--- a/DIoTY/views/my-thermometer.jade
+++ b/DIoTY/views/my-thermometer.jade
@@ -1,18 +1,20 @@
-doctype html
-html
-	head
-		title= title
-		link(rel='stylesheet', href='/stylesheets/style.css')
-		script(src='/javascripts/api.ts.js')
-		script(src='/javascripts/thermometer.js')
-	body(onload='draw();')
-		div
-			canvas#thermometer(width='200' height='900')
-		div(style='position: absolute; top: 50px; left: 350px;')
-			form#drawTemp
-				div#timeWidget(style='font-size: 300%')
-				input#temp(type='text' name='temp' value='-30' maxlength='3')
-				br
-				input#defaultSlider(type='range' min='-30' max='50' onchange='setTempAndDraw();' )
-				br
-				input(type='button' value='Draw' onclick='draw();')
+extends layout
+
+block content
+	div.container
+		div.row
+			div.col-lg-4
+				canvas#thermometer(width='200' height='900')
+			div.col-lg-4
+				form#drawTemp
+					div#timeWidget(style='font-size: 300%')
+					input#temp(type='text' name='temp' value='-30' maxlength='3' readonly)
+					br
+					input#defaultSlider(type='range' min='-30' max='50' onchange='setTempAndDraw();' )
+					br
+					input(type='button' value='Draw' onclick='draw();')
+	script(src='/javascripts/api.ts.js')
+	script(src='/javascripts/thermometer.js')
+	script(src='javascripts/jquery.js')
+	script(src='javascripts/bootstrap.min.js')
+	script(src='javascripts/holder.js')
