--- a/DIoTY/views/trends.jade
+++ b/DIoTY/views/trends.jade
@@ -1,10 +1,13 @@
-﻿doctype html
-html 
-    head
-        title= title
-        meta(name='viewport', content='width=device-width, height=device-height initial-scale=1')
-        script(src='/javascripts/api.ts.js')    
-        script(src='https://www.google.com/jsapi')
-        script(src='javascripts/gchart.js')
-    body
-        div(id="chart_div", style="width: 100%; height: 100%;")
+﻿extends layout
+
+block content
+    div.container
+        div#loading
+            span.glyphicon.glyphicon-refresh.glyphicon-refresh-animate
+        div#chart_div(style="width: 100%; height: 500px;")
+    script(src='/javascripts/api.ts.js')    
+    script(src='https://www.google.com/jsapi')
+    script(src='javascripts/gchart.js')
+    script(src='javascripts/jquery.js')
+    script(src='javascripts/bootstrap.min.js')
+    script(src='javascripts/holder.js')
