--- a/DIoTY/views/my-thermometer.jade
+++ b/DIoTY/views/my-thermometer.jade
@@ -4,15 +4,13 @@ block content
 	div.container
 		div.row
 			div.col-lg-4
+				h2 Current Time 
+				div#timeWidget(style='font-size: 200%')
+			div.col-lg-4
 				canvas#thermometer(width='200' height='900')
 			div.col-lg-4
-				form#drawTemp
-					div#timeWidget(style='font-size: 300%')
-					input#temp(type='text' name='temp' value='-30' maxlength='3' readonly)
-					br
-					input#defaultSlider(type='range' min='-30' max='50' onchange='setTempAndDraw();' )
-					br
-					input(type='button' value='Draw' onclick='draw();')
+				h2 Current Humidity 
+				div#humidityWidget(style='font-size: 200%')
 	script(src='/javascripts/api.ts.js')
 	script(src='/javascripts/thermometer.js')
 	script(src='javascripts/jquery.js')
