remove backup files and fix URI

--- a/DIoTY/views/index.jade
+++ b/DIoTY/views/index.jade
@@ -20,7 +20,7 @@ block content
                 h2 My Thermometer
                 p It shows the current temperature which will be updated at every 5 secs.
                 p
-                    a.btn.btn-default(href='/my-thermometer') Go >>
+                    a.btn.btn-default(href='/thermometer') Go >>
             div.col-lg-4
                 h2 My Temperature Trends
                 p It shows the all temperatures which have been measured until now.
