--- a/DIoTY/views/layout.jade
+++ b/DIoTY/views/layout.jade
@@ -21,7 +21,7 @@ html
                     li.dropdown
                         a.dropdown-toggle(data-toggle="dropdown") For Users
                         ul.dropdown-menu
-                            li: a(href='/my-thermometer') My Thermometer
+                            li: a(href='/thermometer') My Thermometer
                             li: a(href='/trends') My Temperature Trends
                     li.dropdown
                         a.dropdown-toggle(data-toggle="dropdown") For Developers
