--- a/DIoTY/views/thermometer.jade
+++ b/DIoTY/views/thermometer.jade
@@ -4,12 +4,12 @@ block content
 	div.container
 		div.row
 			div.col-lg-4
-				h2 Current Time 
+				h2 Last updated:
 				div#timeWidget(style='font-size: 200%')
 			div.col-lg-4
 				canvas#thermometer(width='200' height='900')
 			div.col-lg-4
-				h2 Current Humidity 
+				h2 Humidity: 
 				div#humidityWidget(style='font-size: 200%')
 	script(src='/javascripts/api.ts.js')
 	script(src='/javascripts/thermometer.js')
