Implements open API

--- a/DIoTY/views/index.jade
+++ b/DIoTY/views/index.jade
@@ -30,12 +30,12 @@ block content
                 h2 JavaScript API documentation
                 p It shows how to use the open API to control thermometer sensor(s). 
                 p
-                    a.btn.btn-default(href='/openapi.html') See details >>
+                    a.btn.btn-default(href='/api.html') See details >>
             div.col-lg-4
                 h2 API implementation (JavaScript version)
                 p You can use the JavaScript API with this implementation.
                 p
-                    a.btn.btn-default(href='/javascripts/api.ts.js') Download >>
+                    a.btn.btn-default(href='/javascripts/api.js') Download >>
             div.col-lg-4
                 h2 API implementation (TypeScript version)
                 p You can use the TypeScript API with this implementation.
