--- a/DIoTY/views/layout.jade
+++ b/DIoTY/views/layout.jade
@@ -19,12 +19,12 @@ html
                 ul.nav.navbar-nav
                     li: a(href='/') Home
                     li.dropdown
-                        a.dropdown-toggle(data-toggle="dropdown") For Users
+                        a.dropdown-toggle(data-toggle="dropdown") For User
                         ul.dropdown-menu
                             li: a(href='/thermometer') My Thermometer
                             li: a(href='/trends') My Temperature Trends
                     li.dropdown
-                        a.dropdown-toggle(data-toggle="dropdown") For Developers
+                        a.dropdown-toggle(data-toggle="dropdown") For Developer
                         ul.dropdown-menu
                             li: a(href='/openapi.html') Do IoT Yourself API documentation
                             li: a(href='/javascripts/api.ts.js') API implementation (JavaScript version)
