--- a/DIoTY/views/thermometer.jade
+++ b/DIoTY/views/thermometer.jade
@@ -11,7 +11,7 @@ block content
 			div.col-lg-4
 				h2 Humidity: 
 				div#humidityWidget(style='font-size: 200%')
-	script(src='/javascripts/api.ts.js')
+	script(src='/javascripts/api.js')
 	script(src='/javascripts/thermometer.js')
 	script(src='javascripts/jquery.js')
 	script(src='javascripts/bootstrap.min.js')
