--- a/DIoTY/views/trends.jade
+++ b/DIoTY/views/trends.jade
@@ -5,8 +5,8 @@ block content
         div#loading
             span.glyphicon.glyphicon-refresh.glyphicon-refresh-animate
         h1#date #{date}
-        div#chart_div(style="width: 100%; height: 600px;")
-    script(src='/javascripts/api.ts.js')    
+        div#chart_div(style="width: 100%; height: 500px;")
+    script(src='/javascripts/api.js')    
     script(src='https://www.google.com/jsapi')
     script(src='javascripts/gchart.js')
     script(src='javascripts/jquery.js')
