basic implement for lux meter

--- a/DIoTY/views/index.jade
+++ b/DIoTY/views/index.jade
@@ -11,9 +11,6 @@ block content
             p
                 a.btn.btn-primary.btn-lg(href='http://webofthink.tistory.com') Web of Think
     div.container
-        p
-            | This is a deliverable which has been created within the simple IoT developing activity of AppIn seminar.
-            | AppIn seminar is designed and provided by AppCenter and Daddy's Lab for newbies to understand IoT easily.        
         p This version currently supports the following features:
         div.row
             div.col-lg-4
@@ -42,7 +39,7 @@ block content
                 p
                     a.btn.btn-default(href='/javascripts/api.ts') Download >>
         hr
-        footer Copyright (C) Daddy's Lab. This work is licensed under version 3.0 of the Creative Commons CC-BY license.
+        footer Copyright (C) 2015 Applied Data Science Lab@SNU. This work is licensed under version 3.0 of the Creative Commons CC-BY license.
     script(src='javascripts/jquery.js')
     script(src='javascripts/bootstrap.min.js')
     script(src='javascripts/holder.js')
