update for working thermo-hygrometer

--- a/DIoTY/views/index.jade
+++ b/DIoTY/views/index.jade
@@ -11,18 +11,8 @@ block content
             p
                 a.btn.btn-primary.btn-lg(href='http://webofthink.tistory.com') Web of Think
     div.container
-        p This version currently supports the following features:
+        p This version currently supports the following features: #{sensor}
         div.row
-            div.col-lg-4
-                h2 My Thermometer
-                p It shows the current temperature which will be updated at every 5 secs.
-                p
-                    a.btn.btn-default(href='/my-thermometer') Go >>
-            div.col-lg-4
-                h2 My Temperature Trends
-                p It shows the all temperatures which have been measured until now.
-                p
-                    a.btn.btn-default(href='/trends') Go >>
             div.col-lg-4
                 h2 JavaScript API documentation
                 p It shows how to use the open API to control thermometer sensor(s). 
