include missing socket.io.js

--- a/DIoTY/views/thermometer.jade
+++ b/DIoTY/views/thermometer.jade
@@ -12,6 +12,7 @@ block content
 				h2 Humidity: 
 				div#humidityWidget(style='font-size: 200%')
 	script(src='/javascripts/api.js')
+    script(src='/javascripts/socket.io.js')
 	script(src='/javascripts/thermometer.js')
 	script(src='javascripts/jquery.js')
 	script(src='javascripts/bootstrap.min.js')
